# sticker-transformers

./: .gitignore  CONTRIBUTORS  Cargo.toml  README.md  shell.nix  tests.nix
.github/workflows/: rust.yml
nix/: Cargo.nix  models.nix  sources.json
src/: activations.rs  bert_model.rs  hdf5_model.rs  layers.rs  lib.rs  scalar_weighting.rs  traits.rs  util.rs
src/models/: mod.rs
src/models/albert/: mod.rs
src/models/bert/: mod.rs
src/models/roberta/: mod.rs
src/models/sinusoidal/: mod.rs
src/optimizers/: adamw.rs  mod.rs
testdata/: download-test-data.sh
utils/: tf_checkpoint_to_hdf5.py
