[package]
name = "sticker-transformers"
version = "0.4.0"
authors = ["Daniël de Kok <me@danieldk.eu>"]
edition = "2018"
description = "Transformer architectures, such as BERT"
homepage = "https://github.com/stickeritis/sticker-transformers/"
repository = "https://github.com/stickeritis/sticker-transformers.git"
# Use after SPDX list is updated
# license = "BlueOak-1.0.0"
license-file = "LICENSE.md"

exclude = [
  ".gitignore",
  ".github",
  "testdata",
]

[dependencies]
failure = "0.1"
hdf5 = "0.5"
serde = { version = "1", features = ["derive"] }
tch = "= 0.1.5"

[dev-dependencies]
approx = "0.3"
maplit = "1"
ndarray = { version = "0.13", features = ["approx"] }

[features]
model-tests = []
