[package]
name = "sticker-transformers"
version = "0.6.2"
authors = ["Daniël de Kok <me@danieldk.eu>"]
edition = "2018"
description = "Transformer architectures, such as BERT"
homepage = "https://github.com/stickeritis/sticker-transformers/"
repository = "https://github.com/stickeritis/sticker-transformers.git"
# Use after SPDX list is updated
# license = "BlueOak-1.0.0"
license-file = "LICENSE.md"

exclude = [
  ".gitignore",
  ".github",
  "testdata",
  "shell.nix"
]

[dependencies]
hdf5 = { version = "0.5", optional = true }
serde = { version = "1", features = ["derive"] }
tch = "= 0.1.7"
thiserror = "1"

[dev-dependencies]
approx = "0.3"
maplit = "1"
ndarray = { version = "0.13", features = ["approx"] }

[features]
default = ["load-hdf5"]
load-hdf5 = ["hdf5"]
model-tests = []
